--- a/hello-world-tab-with-backend/teamsapp.yml
+++ b/hello-world-tab-with-backend/teamsapp.yml
@@ -83,10 +83,10 @@ deploy:
     with:
       workingDirectory: api
       args: run build --if-present
-  - uses: prerequisite/install # Install dependencies
+  - uses: devTool/install # Install development tool(s)
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
       dotnetPath: DOTNET_PATH
   - uses: cli/runDotnetCommand
     with:
