--- a/share-now/teamsapp.yml
+++ b/share-now/teamsapp.yml
@@ -113,10 +113,10 @@ deploy:
     with:
       workingDirectory: api
       args: install
-  - uses: prerequisite/install # Install dependencies
+  - uses: devTool/install # Install development tool(s)
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
       dotnetPath: DOTNET_PATH
   - uses: cli/runDotnetCommand
     with:
