--- a/todo-list-with-Azure-backend-M365/teamsapp.yml
+++ b/todo-list-with-Azure-backend-M365/teamsapp.yml
@@ -69,10 +69,10 @@ provision:
       appId: M365_APP_ID
 
 deploy:
-  - uses: prerequisite/install # Install dependencies
+  - uses: devTool/install # Install development tool(s)
     with:
       dotnet: true
-    writeToEnvironmentFile: # Write the information of installed dependencies into environment file for the specified environment variable(s).
+    writeToEnvironmentFile: # Write the information of installed development tool(s) into environment file for the specified environment variable(s).
       dotnetPath: DOTNET_PATH
 
   - uses: cli/runNpmCommand # Run npm command
