feat: no longer actively support node 14 in Teams Toolkit

--- a/graph-connector-app/api/package.json
+++ b/graph-connector-app/api/package.json
@@ -2,7 +2,7 @@
     "name": "teamsfx-template-api",
     "version": "1.0.0",
     "engines": {
-        "node": "14 || 16 || 18"
+        "node": "16 || 18"
     },
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
