--- a/command-bot-with-sso/package.json
+++ b/command-bot-with-sso/package.json
@@ -5,7 +5,7 @@
     "author": "Microsoft",
     "license": "MIT",
     "engines": {
-        "node": "14 || 16 || 18"
+        "node": "16 || 18"
     },
     "main": "./lib/index.js",
     "scripts": {
