--- a/incoming-webhook-notification/package.json
+++ b/incoming-webhook-notification/package.json
@@ -4,7 +4,7 @@
   "description": "Microsoft Teams Toolkit Incoming Webhook Notification Sample",
   "author": "Microsoft",
   "engines": {
-    "node": "14 || 16 || 18"
+    "node": "16 || 18"
   },
   "license": "MIT",
   "main": "./lib/index.js",
