--- a/share-now/api/package.json
+++ b/share-now/api/package.json
@@ -2,7 +2,7 @@
   "name": "teamsfx-sample-share-now-function",
   "version": "1.0.0",
   "engines": {
-    "node": "14 || 16 || 18"
+    "node": "16 || 18"
   },
   "scripts": {
     "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run dev",
