--- a/share-now/package.json
+++ b/share-now/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "author": "",
     "engines": {
-        "node": "14 || 16 || 18"
+        "node": "16 || 18"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
