--- a/share-now/tabs/package.json
+++ b/share-now/tabs/package.json
@@ -2,7 +2,7 @@
   "name": "share-now",
   "version": "1.0.0",
   "engines": {
-    "node": "14 || 16 || 18"
+    "node": "16 || 18"
   },
   "private": true,
   "dependencies": {
