--- a/todo-list-with-Azure-backend-M365/.vscode/tasks.json
+++ b/todo-list-with-Azure-backend-M365/.vscode/tasks.json
@@ -90,7 +90,14 @@
             "options": {
                 "cwd": "${workspaceFolder}/api",
                 "env": {
-                    "PATH": "${command:fx-extension.get-func-path}${env:PATH}"
+                    "PATH": "${workspaceFolder}/devTools/func:${env:PATH}"
+                }
+            },
+            "windows": {
+                "options": {
+                    "env": {
+                        "PATH": "${workspaceFolder}/devTools/func;${env:PATH}"
+                    }
                 }
             },
             "problemMatcher": {
